decent state main functionality

--- a/src/sass/pages/home.scss
+++ b/src/sass/pages/home.scss
@@ -29,6 +29,10 @@
   margin: 3rem;
 }
 
+.homepage {
+  height: 100vh;
+}
+
 .homepage-navigation-title {
   margin-right: 2rem;
 }
@@ -92,10 +96,6 @@
 		opacity: 1;
 	}
 }
-
-// .homepage-landing.load {
-//   opacity: 1;
-// }
 
 .homepage-content {
   display: inline-block;
