--- a/src/sass/themes/colors.scss
+++ b/src/sass/themes/colors.scss
@@ -4,13 +4,9 @@ $white: #fff;
 $primary-orange: #e9c693;
 $primary-orange-light: #edd1a8;
 $primary-orange-dark: #a38a66;
+$bright-orange: #fab044;
 
 $lightest-blue: aliceblue;
 $light-blue: #bbd9f4;
 $light-beige: #eee0cc;
-
-// secondary: {
-//   light: '#d0e5b2',
-//   main: '#c5df9f',
-//   dark: '#899c6f',
-// },
+$electric-blue: #2196f3;
